lintian (2.5.44) UNRELEASED; urgency=medium

  XXX: generate tag summary with private/generate-tag-summary

  * checks/description.{desc,pm}:
    + [NT] Drop duplicate word tag, which is now covered by the
      spelling error check.
  * checks/fields.pm:
    + [NT] Add default-jdk-headless and openjdk-X-jdk-headless
      to the set of known java providers.
    + [JW] Relax build profile dependency checks to allow versions with
      trailing tilde.  (Closes: #819509)  Thanks to Felix Geyer for the bug
      report.
  * checks/nmu.{desc,pm}:
    + [NT] Create a separate tag for extra whitespace around uploader name
      in the changelog.  Thanks to Ben Wiederhake for the suggestion.
      (Closes: #801647)
  * checks/scripts.desc:
    + [NT] Suggest dh_python2 / dh_python3 instead of dh_pysupport and
      dh_pycentral.  Thanks to Neil Williams for the report.
      (Closes: #818607)

  * commands/info.pm:
    + [NT] Accept "--tag" as an alias of "--tags".  Thanks to Robert
      Luberda for the suggestion.  (Closes: #816454)
  * commands/lintian:
    + [NT] Also check DEBRELEASE_DEBS_DIR for .changes files when no
      packages are given on the command line.  Thanks to Sean Whitton for
      the suggestion.  (Closes: #812568)

  * data/menu-format/known-desktop-keys:
    + [NT] Accept "DesktopNames" as a known key in desktop files.  Thanks
      to Yves-Alexis Perez for the suggestion.  (Closes: #766099)
  * data/standards-version/release-dates:
    + [AB] Add 3.9.8.

  * debian/control:
    + [AB] Declare compliance with Debian Policy 3.9.8. (No other changes
      required.)

  * lib/Lintian/Check.pm:
    + [JW,NT] Flag a duplicate word as a spelling error.  This affects
      several tags plus spellintian.  (Closes: #800476)
  * lib/Lintian/Relation.pm:
    + [JW,NT] Fix broken implication with "P (<< V)" relations.
      (Closes: #819560)

 -- Niels Thykier <niels@thykier.net>  Sun, 03 Apr 2016 18:48:59 +0000

lintian (2.5.43) unstable; urgency=medium
