@@ -10,7 +10,7 @@ Build-Depends: debhelper (>= 9),
  sparc i386 amd64
  ]
 Build-Depends-Indep: perl (> 5.8)
-XS-Vcs-Svn: svn://svn.example.com/{$source}/trunk
+XS-Vcs-Svn: https://svn.example.com/{$source}/trunk
 #Vcs-Git: git://git.debian.org/collab-maint/<pkg>.git
 #Vcs-Browser: http://git.debian.org/?p=collab-maint/<pkg>.git;a=summary
 
